Incorrect behaviour of Snap Utilities Line Addon #80481

Closed
opened 2020-09-04 21:00:02 +02:00 by Victoria De Blois · 8 comments

version: 2.91.0 Alpha, branch: master, commit date: 2020-09-03 20:57, hash: a96283ba511d, type: Release
build date: 2020-09-03, 23:18:14
platform: Linux
System info: system-info.txt

Erroneous mouse behavior when using the Snap Utilites Line addon. The mouse position does not seem to correspond to the position inferred and used by the addon, as shown in the following video. Moreover, the dot that indicates the current mouse position seems to be lagging compared to the true mouse position in the viewport.
2020-09-04_21-39-05_edit.mkv

version: 2.91.0 Alpha, branch: master, commit date: 2020-09-03 20:57, hash: a96283ba511d, type: Release build date: 2020-09-03, 23:18:14 platform: Linux System info: [system-info.txt](https://archive.blender.org/developer/F8841514/system-info.txt) Erroneous mouse behavior when using the Snap Utilites Line addon. The mouse position does not seem to correspond to the position inferred and used by the addon, as shown in the following video. Moreover, the dot that indicates the current mouse position seems to be lagging compared to the true mouse position in the viewport. [2020-09-04_21-39-05_edit.mkv](https://archive.blender.org/developer/F8841522/2020-09-04_21-39-05_edit.mkv)

Added subscriber: @MeiKasahara

Added subscriber: @MeiKasahara

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Germano Cavalcante self-assigned this 2020-09-05 01:32:48 +02:00

I can confirm.
The problem is caused by mixing python drawing APIs.
I'll take a better look at this next week

I can confirm. The problem is caused by mixing python drawing APIs. I'll take a better look at this next week

This particular issue with the behavior of that tool appears to be fixed in Blender version: 2.91.0 Alpha, branch: master, commit date: 2020-10-11 22:38, hash: df3d124e9104.

This particular issue with the behavior of that tool appears to be fixed in Blender version: 2.91.0 Alpha, branch: master, commit date: 2020-10-11 22:38, hash: df3d124e9104.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This issue was referenced by blender/blender@ed817d62bd

This issue was referenced by blender/blender@ed817d62bd087686112fe4428ad47bd237dbef46

This issue was referenced by blender/blender@4430e8a008

This issue was referenced by blender/blender@4430e8a00810ca8df2fa20029c4cb8078e8cdbe6
Sign in to join this conversation.
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#80481
No description provided.