source/blender/python/generic/py_capi_utils.h
@@ -140,6 +140,8 @@ struct PyC_StringEnum {
 };
 
 int PyC_ParseStringEnum(PyObject *o, void *p);
+const char *PyC_StringEnum_FindIDFromValue(const struct PyC_StringEnumItems *items,
+                                           const int value);
 
 int PyC_CheckArgs_DeepCopy(PyObject *args);
 
